package model;

public interface AudioPlayer {
    void play(String audioType, String filename);
}
