package model;

public interface VideoPlayer {
    void playMP4(String filename);
    void playMKV(String filename);
}
